# langchain-streamlit-docker-template

./: .gcloudignore  .gitignore  Dockerfile  LICENSE  README.md  app.yaml  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
demo_app/: main.py  main_simple.py
demo_app/components/: faq.py  sidebar.py
