[project]
name = "langchain-streamlit-docker-template"
version = "0.1.0"
description = "A template langchain Streamlit App with Docker"
authors = [
    {name = "Amjad Raza", email = "amjad@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.4",
    "langchain-openai>=0.2.3",
    "streamlit>=1.39.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"