[project]
name = "langchain-streamlit-docker-template"
version = "0.1.0"
description = "A template langchain Streamlit App with Docker"
authors = [
    {name = "Amjad Raza", email = "amjad@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.20",
    "langchain-openai>=0.3.8",
    "langchain-community>=0.3.19",
    "streamlit>=1.43.0",
    "pypdf>=5.3.1",

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"